First cut with Open Tok integration ** Something works **

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,12 @@ android {
         exclude 'META-INF/LICENSE-FIREBASE.txt'
         exclude 'META-INF/NOTICE'
     }
+
+    sourceSets {
+        main {
+            jniLibs.srcDir 'jniLibs'
+        }
+    }
 }
 
 dependencies {
