--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.firebase:firebase-client-android:2.5.0+'
+    compile 'com.android.support:support-v4:19.0.+'
 
 }
