Transition from full activity view to Bubble view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
             </intent-filter>
 
         </receiver>
-        <service android:enabled="true" android:name=".VideoView"/>
+        <service android:enabled="true" android:name=".BubbleVideoView"/>
 
     </application>
 
