--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,11 @@
             android:label="@string/app_name" >
         </activity>
 
+        <activity android:name=".ActivityDialog"
+                  android:label= "vaipo"
+                  android:theme="@android:style/Theme.Holo.Dialog" >
+        </activity>
+
         <receiver android:name=".CallStateHandler">
             <intent-filter>
                 <action android:name="android.intent.action.PHONE_STATE"/>
